--- a/style.css
+++ b/style.css
@@ -1,4 +1,76 @@
+* {
+    font-family: Helvetica, Arial, sans-serif;
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+  }
+
 h1{
-    margin: 0 auto;
+    margin: 40px;
     text-align: center;
 }
+
+h2{
+  margin: 40px;
+  text-align: center;
+}
+
+.ul {
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.class1 {
+    background-color: #cdd02e;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 50px auto;
+  }
+
+.class2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+  }
+
+
+  input[type="text"],
+  input[type="number"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+  }
+
+ 
+  button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  button:hover {
+    background-color: #0056b3;
+  }
